--- a/jenkins_role/tasks/install_jenkins.yaml
+++ b/jenkins_role/tasks/install_jenkins.yaml
@@ -1,12 +1,12 @@
 ---
 # Install Jenkins 
 
-- name: Install java,unzip and wget
+- name: Install java,maven and wget
   yum:
     name:
       - wget
       - java-1.8.0-openjdk-devel
-      - unzip
+      - maven
 
 - name: Download jenkins.repo
   get_url:
