--- a/jenkins_role/tasks/install_nexus.yaml
+++ b/jenkins_role/tasks/install_nexus.yaml
@@ -33,6 +33,7 @@
     state: directory
     owner: nexus
     group: nexus
+    recurse: yes
 
 - name: Creating systemd Unit file for Nexus
   copy:
